--- a/_sass/queries.scss
+++ b/_sass/queries.scss
@@ -1,33 +1,21 @@
 /* Extra large desktops */
 @media (max-width: 1600px) {
-
 }
 /* Large Devices, Wide Screens */
 @media (max-width : 1280px) {
-
 }
-
 /* Medium Devices, Desktops */
 @media (max-width : 992px) {
-
 }
-
 /* Small Devices, Tablets */
 @media (max-width : 768px) {
-
 }
-
 /* Extra Small Devices, Phones */
 @media (max-width : 480px) {
-
 }
-
 /* Custom, iPhone Retina */
 @media (max-width : 320px) {
-
 }
-
-
 
 //## COVERS #######
 @media (max-width: 1600px) {
@@ -98,7 +86,7 @@
 	}
 }
 
-//## MENU-FS #######
+//## MENU-FS && HEADER #######
 @media (max-width: 1600px) and (max-height: 860px) {
 	#menu-fs #menu-options ul {
 		font-size: 6vh;
@@ -134,4 +122,17 @@
 			}
 		}
 	}
+}
+@media (max-width: 480px) {
+	#main-header {
+		padding: .5em 1em;
+	}
+	#menu-fs #menu-options ul a {
+		padding-left: 8vw;
+	}
+
+}
+//## SECTIONS #######
+// index
+@media (max-width: 480px) {
 }
