--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -52,28 +52,7 @@ main p + p, li p {
 	display: inline-block;
 }
 .underlined {
-	border-style: solid;
-	border-width: 0 0 .5em;
-	border-image: url("../images/pattern.png") 50 20 round;
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
-	padding: 0 .25em;
-	width: 100%;
-	max-width: 15em;
-	margin-bottom: .5em;
-	&:after, &:before {
-		content: "";
-		flex: 1;
-		height: 0.045em;
-		background: $green1;
-	}
-	&:before {
-		margin-right: .25em;
-	}
-	&:after {
-		margin-left: .25em;
-	}
+	@include underlined;
 }
 .contact {
 	font-size: 1.1em;
