--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -31,3 +31,28 @@
 	background: url("../images/#{$bkg}.svg") no-repeat;
 	z-index: -1;
 }
+@mixin underlined {
+	border-style: solid;
+	border-width: 0 0 .5em;
+	border-image: url("../images/pattern.png") 50 20 round;
+	box-sizing: border-box;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0 .25em;
+	width: 100%;
+	max-width: 15em;
+	margin-bottom: .5em;
+	&:after, &:before {
+		content: "";
+		flex: 1;
+		height: 0.045em;
+		background: $green1;
+	}
+	&:before {
+		margin-right: .25em;
+	}
+	&:after {
+		margin-left: .25em;
+	}
+}
