--- a/_sass/sections.scss
+++ b/_sass/sections.scss
@@ -63,6 +63,9 @@
 //Metodología
 #metodologias section {
 	padding: 5em 4em 6em;
+	ul, li, p {
+		font-size: 1em;
+	}
 	.text-wrapper {
 		display: inline-block;
 		position: relative;
