--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -32,14 +32,13 @@
 	z-index: -1;
 }
 @mixin underlined {
-	border-style: solid;
-	border-width: 0 0 .5em;
-	border-image: url("../images/pattern.png") 50 20 round;
 	box-sizing: border-box;
 	display: inline-flex;
 	justify-content: center;
 	align-items: center;
-	padding: 0 .25em;
+	background: url("../images/pattern.png") repeat-x bottom;
+	background-size: 1em;
+	padding: 0 .25em .5em;
 	width: 100%;
 	max-width: 15em;
 	margin-bottom: .5em;
@@ -54,6 +53,10 @@
 	}
 	&:after {
 		margin-left: .25em;
+	}
+	@media (max-width: 480px) {
+		background-size: 7.7%;
+		padding: 0 .25em .55em;
 	}
 }
 @mixin short-padding {
