Modificaciones para newsletter con mailchimp

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,6 @@
 	</address>
 	<div class="newsletter">
 		<h4>Subscríbete a nuestro newsletter!</h4>
-		<form>
-			<input type="email" name="email" placeholder="Introduce tu e-mail"/><input type="submit" value="OK"/>
-		</form>
+		{% include newsletter.html %}
 	</div>
 </footer>
