--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -46,6 +46,7 @@ footer {
 		}
 	}
 	.newsletter {
+		position: relative;
 		background: $white;
 		padding: .5em 1em 1em;
 		input {
@@ -67,6 +68,11 @@ footer {
 					background: $green1;
 				}
 			}
+		}
+		.excp {
+			position: absolute;
+			left: -200%;
+			top: 0;
 		}
 	}
 }
