Arreglado tiempo de intervalo, exclamación en index y asteriscos en contacto

--- a/_sass/sections.scss
+++ b/_sass/sections.scss
@@ -341,6 +341,9 @@
 			label {
 				line-height: 2em;
 				font-weight: bold;
+				&:after {
+					content: "*";
+				}
 			}
 		}
 		.group-wrapper {
