--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,7 @@
 					</li>
 				{% endif %}
 			{% endfor %}
+			<li><a href="https://psiconueve.blogspot.com" target="_new">Blog</li>
 		</ul>
 	</nav>
 	<ul id="quotes">
