--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 					</li>
 				{% endif %}
 			{% endfor %}
-			<li><a href="https://psiconueve.blogspot.com" target="_blank">Blog</a></li>
+			<li><a href="https://psiconueve.blogspot.com" target="_blank">Visita nuestro blog</a></li>
 		</ul>
 	</nav>
 	<ul id="quotes">
