--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,8 @@
 		<p>info@psiconueve.es</p>
 		<p class="contact tel">695 642 851 <span>disponible 24/7</span></p>
 	</address>
-	<div class="newsletter">
+	<!--div class="newsletter">
 		<h4>Subscríbete a nuestro newsletter!</h4>
 		{% include newsletter.html %}
-	</div>
+	</div-->
 </footer>
