--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -1,11 +1,11 @@
 <!-- Begin MailChimp Signup Form -->
-<div id="mc_embed_signup">
+<!--div id="mc_embed_signup">
 	<form action="//psiconueve.us14.list-manage.com/subscribe/post?u=cbf34732151ff1e3426fefa34&amp;id=fc48a4a814" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 		<div id="mc_embed_signup_scroll">
-			<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Introduce tu e-mail" required><input type="submit" value="Ok" name="subscribe" id="mc-embedded-subscribe" class="button">
+			<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Introduce tu e-mail" required><input type="submit" value="Ok" name="subscribe" id="mc-embedded-subscribe" class="button"-->
 			<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-			<div class="excp" aria-hidden="true"><input type="text" name="b_cbf34732151ff1e3426fefa34_fc48a4a814" tabindex="-1" value=""></div>
+			<!--div class="excp" aria-hidden="true"><input type="text" name="b_cbf34732151ff1e3426fefa34_fc48a4a814" tabindex="-1" value=""></div>
 		</div>
-	</form>
+	</form-->
 </div>
 <!--End mc_embed_signup-->
