Se añade el enlace a tarifas

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,7 @@
 			<li> <a href="/quienes_somos/">Quiénes Somos</a> </li> 
 			<li> <a href="/servicios/">Servicios Personalizados</a> </li> 
 			<li> <a href="/cursos_talleres/">Cursos y Talleres</a> </li> 
+			<li> <a href="/tarifas/">Tarifas</a> </li> 
 			<li> <a href="/contacto/">Contacto</a> </li> 
 		</ul>
 	</nav>
