--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 		<ul>
 			<li> <a href="/">Inicio</a> </li> 
 			<li> <a href="/nuestra_filosofia/">Nuestra Filosofía</a> </li> 
-			<li> <a href="https://psiconueve.blogspot.com" target="_blank">Visita nuestro blog</a></li> 
+			<li> <a href="https://psiconueve.blogspot.com/search?updated-max=2019-07-11T14:28:00-07:00&max-results=20" target="_blank">Visita nuestro blog</a></li> 
 			<li> <a href="/areas_intervencion/">Áreas de Intervención</a> </li> 
 			<li> <a href="/metodologia/">Metodología</a> </li> 
 			<li> <a href="/quienes_somos/">Quiénes Somos</a> </li> 
