--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,9 @@
 		<span class="logo"></span>
 		<h4>Sociedad Profesional de Psicología</h4>
 		<p>C/ María de Guzmán, 61, 28003, Madrid.</p>
-		<p>info@psiconueve.es</p>
-		<p class="contact tel">695 642 851 <span>disponible 24/7</span></p>
+		<p>psiconueve@gmail.com</p>
+		<p class="contact tel">Si llamas en horario de mañana: 670 064 084 <br>
+			Si llamas en horario de tarde: 691 023 777<span>disponible 24/7</span></p>
 	</address>
 	<!--div class="newsletter">
 		<h4>Subscríbete a nuestro newsletter!</h4>
