--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 		<p>C/ María de Guzmán, 61, 28003, Madrid.</p>
 		<p>psiconueve@gmail.com</p>
 		<p class="contact tel">Si llamas en horario de mañana: 670 064 084 <br>
-			Si llamas en horario de tarde: 691 023 777<span>disponible 24/7</span></p>
+			Si llamas en horario de tarde: 691 023 777</p>
 	</address>
 	<!--div class="newsletter">
 		<h4>Subscríbete a nuestro newsletter!</h4>
