--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
 		<span class="logo"></span>
 		<h4>Sociedad Profesional de Psicología</h4>
 		<p>C/ María de Guzmán, 61, 28003, Madrid.</p>
+		<h4>Contáctanos</h4>
 		<p>psiconueve@gmail.com</p>
 		<p class="contact tel">Si llamas en horario de mañana: 670 064 084 <br>
 			Si llamas en horario de tarde: 691 023 777</p>
