--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -147,5 +147,6 @@
 .online{
 	font-family: "Open Sans Condensed", "sans-serif";
 	color: #009286;
-	font-size: 3em;
+	font-size: 5em;
+	text-align: center;
 }
